--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -18,3 +18,8 @@ ul {
 html {
     box-sizing: border-box;
 }
+
+body {
+    margin: 0;
+    padding: 0;
+}
